--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,29 +1,21 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/home']">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/gallery']">Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/contacts']">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav> -->
 
-  <mat-toolbar color="primary">
-    <span>Aashirwaad</span>
-    <span class="example-spacer"></span>
-    <a mat-button [routerLink]="['/home']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-    <a mat-button [routerLink]="['/gallery']" routerLinkActive="active">Gallery</a>
-    <a mat-button [routerLink]="['/contacts']" routerLinkActive="active">Contacts</a>
-  </mat-toolbar>
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top d-flex align-items-center ">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <h1 class="logo"><a [routerLink]="['/home']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <img src="assets/images/logonew3.png"/>
+      </a></h1>
+    
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="nav-link scrollto" [routerLink]="['/home']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
+          <li><a class="nav-link scrollto" [routerLink]="['/gallery']" routerLinkActive="active">Gallery</a></li>
+            <li><a class="nav-link scrollto" [routerLink]="['/contacts']" routerLinkActive="active">Contacts</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
