--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="">
       <div class="slide-show-container">
             <ngx-slick-carousel class="carousel"
                         #slickModal="slick-carousel"
@@ -8,29 +8,108 @@
                   </div>
             </ngx-slick-carousel>
       </div>
-      <div class="d-grid gap-3">
-            <div class="p-2">
-                  <p>
-                        Aashirwad Farms with it’s spacious Party Lawns and fully air-conditioned Banquet Hall located in the 
-                        heart of Yamuna Nagar, Haryana is the premier event hosting facility. 
-                        The big luscious green lawn and spectacular banquet hall makes a good choice for Weddings, 
-                        Receptions, Musical Nights, Exhibition and Trade shows, Concerts, Conferences etc.  Located minutes 
-                        away the bus stop and the railway station make it a perfect venue to host an ideal function. 
-                        The beautifully landscaped and gated venue is walled from all four sides. The site is a premier 
-                        located for all neighboring cities.
-                  </p>
-            </div>
-            <div class="p-2">
-                  <p>
-                        We provide well maintained extra ordinary lush green lawn and sparkling banquet hall for parties and 
-                        general recreation activities on rental basis. Aashirwad Farm’s eco-friendly well maintained lawn can 
-                        hold a party size up to 2500 guests.  Separate lavatory facilities for men and women are available. 
-                        The farm house has an air-conditioned 2 bed room house with attached bathroom overlooking the infinite 
-                        greens. The rooms are airy and furnished with all major accessories.  Aashirwad Farms has ample parking 
-                        on all three sides of the facility. Water and electricity is also provided throughout the compound.
-                  </p>
-            </div>
       </div>
-      <div>
-      </div>
-</div>
+    <main id="main">
+  
+      <!-- ======= About Us Section ======= -->
+      <section id="about" class="about">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>About Us</h2>
+            <p>Aashirwad Farms with it’s spacious Party Lawns and fully air-conditioned Banquet Hall located in the 
+                  heart of Yamuna Nagar, Haryana is the premier event hosting facility. 
+                  The big luscious green lawn and spectacular banquet hall makes a good choice for Weddings, 
+                  Receptions, Musical Nights, Exhibition and Trade shows, Concerts, Conferences etc.  Located minutes 
+                  away the bus stop and the railway station make it a perfect venue to host an ideal function. 
+                  The beautifully landscaped and gated venue is walled from all four sides. The site is a premier 
+                  located for all neighboring cities.</p>
+          </div>
+  
+          <div class="row content">
+            <div class="col-lg-6">
+              <p>
+                  We provide well maintained extra ordinary lush green lawn and sparkling banquet hall for parties and 
+                  general recreation activities on rental basis. Aashirwad Farm’s eco-friendly well maintained lawn can 
+                  hold a party size up to 2500 guests.  
+              </p>
+              
+            </div>
+            <div class="col-lg-6 pt-4 pt-lg-0">
+              <p>
+                  Separate lavatory facilities for men and women are available. 
+                  The farm house has an air-conditioned 2 bed room house with attached bathroom overlooking the infinite 
+                  greens. The rooms are airy and furnished with all major accessories.  Aashirwad Farms has ample parking 
+                  on all three sides of the facility. Water and electricity is also provided throughout the compound.
+              </p>
+            </div>
+          </div>
+  
+        </div>
+      </section>
+      <section id="contact" class="contact">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>Contact Us</h2>
+          </div>
+  
+          <div class="row mt-1 d-flex justify-content-end" data-aos="fade-right" data-aos-delay="100">
+  
+            <div class="col-lg-5">
+              <div class="info">
+                <div class="address">
+                  <i class="bi bi-geo-alt"></i>
+                  <h4>Location:</h4>
+                  <p>M-31, Industrial Area, Yamuna Nagar(Harayana) India</p>
+                </div>
+  
+                <div class="email">
+                  <i class="bi bi-envelope"></i>
+                  <h4>Email:</h4>
+                  <p>info@demo.com</p>
+                </div>
+  
+                <div class="phone">
+                  <i class="bi bi-phone"></i>
+                  <h4>Call:</h4>
+                  <p>+0 0000 00000 000</p>
+                </div>
+  
+              </div>
+  
+            </div>
+  
+            <div class="col-lg-6 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="100">
+  
+              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <div class="row">
+                  <div class="col-md-6 form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  </div>
+                  <div class="col-md-6 form-group mt-3 mt-md-0">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  </div>
+                </div>
+                <div class="form-group mt-3">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                </div>
+                <div class="form-group mt-3">
+                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                </div>
+                <div class="my-3">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                </div>
+                <div class="text-center"><button type="submit">Send Message</button></div>
+              </form>
+  
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- End Contact Section -->
+  
+    </main><!-- End #main -->
