--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,19 +59,19 @@
             <div class="col-lg-5">
               <div class="info">
                 <div class="address">
-                  <i class="bi bi-geo-alt"></i>
+                  <i class="fa fa-map-marker"></i>
                   <h4>Location:</h4>
                   <p>M-31, Industrial Area, Yamuna Nagar(Harayana) India</p>
                 </div>
   
                 <div class="email">
-                  <i class="bi bi-envelope"></i>
+                  <i class="fa fa-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@demo.com</p>
+                  <p>info@aashirwad.com</p>
                 </div>
   
                 <div class="phone">
-                  <i class="bi bi-phone"></i>
+                  <i class="fa fa-phone"></i>
                   <h4>Call:</h4>
                   <p>+0 0000 00000 000</p>
                 </div>
