--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,7 +15,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4 style="visibility:hidden;">Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Contacts</a></li>
             </ul>
@@ -26,7 +26,7 @@
             <p>M-31, Industrial Area, <br>Yamuna Nagar(Harayana) India
                 <br><br>
               <strong>Phone:</strong> +0 0000 00000 00<br>
-              <strong>Email:</strong> info@demo.com<br>
+              <strong>Email:</strong> info@aashirwad.com<br>
             </p>
 
           </div>
@@ -35,11 +35,9 @@
             <h3>About Anyar</h3>
             <p>Aashirwad Farms with it’s spacious Party Lawns and fully air-conditioned Banquet Hall located in the heart of Yamuna Nagar, Haryana is the premier event hosting facility.</p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
 
