--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,1 +1,71 @@
-<p>contacts works!</p>
+<div class="">
+    <div class="slide-show-container">
+    <img src="assets/images/contact.jpg" width="100%"/>
+    </div>
+    </div>
+
+<section id="contact" class="contact">
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-title">
+        <h2>Contact Us</h2>
+      </div>
+
+      <div class="row mt-1 d-flex justify-content-end" data-aos="fade-right" data-aos-delay="100">
+
+        <div class="col-lg-5">
+          <div class="info">
+            <div class="address">
+              <i class="fa fa-map-marker"></i>
+              <h4>Location:</h4>
+              <p>M-31, Industrial Area, Yamuna Nagar(Harayana) India</p>
+            </div>
+
+            <div class="email">
+              <i class="fa fa-envelope"></i>
+              <h4>Email:</h4>
+              <p>info@aashirwad.com</p>
+            </div>
+
+            <div class="phone">
+              <i class="fa fa-phone"></i>
+              <h4>Call:</h4>
+              <p>+0 0000 00000 000</p>
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="col-lg-6 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="100">
+
+          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <div class="row">
+              <div class="col-md-6 form-group">
+                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+              </div>
+              <div class="col-md-6 form-group mt-3 mt-md-0">
+                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+              </div>
+            </div>
+            <div class="form-group mt-3">
+              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+            </div>
+            <div class="form-group mt-3">
+              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+            </div>
+            <div class="my-3">
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">Your message has been sent. Thank you!</div>
+            </div>
+            <div class="text-center"><button type="submit">Send Message</button></div>
+          </form>
+
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Contact Section -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3450.83721317343!2d77.26937121511703!3d30.127471281852223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ef9372d7fdb81%3A0x11314871df9a8150!2sMsons%20Industries!5e0!3m2!1sen!2sin!4v1661866863657!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
