--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,6 +1,6 @@
 <div class="">
     <div class="slide-show-container">
-    <img src="assets/images/contact.jpg" width="100%"/>
+    <img src="assets/images/contact.jpg" width="100%" class="contactbnr"/>
     </div>
     </div>
 
@@ -68,4 +68,4 @@
 
     </div>
   </section><!-- End Contact Section -->
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3450.83721317343!2d77.26937121511703!3d30.127471281852223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ef9372d7fdb81%3A0x11314871df9a8150!2sMsons%20Industries!5e0!3m2!1sen!2sin!4v1661866863657!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3450.83721317343!2d77.26937121511703!3d30.127471281852223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ef9372d7fdb81%3A0x11314871df9a8150!2sMsons%20Industries!5e0!3m2!1sen!2sin!4v1662547650149!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
