--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -6,8 +6,50 @@
         <li class="img-cell">1</li>
     </ul>
 </div> -->
-
-<div class="flex-parent-element">
+<div class="">
+    <div class="slide-show-container">
+    <img src="assets/images/gallery.jpg" width="100%" class="contactbnr"/>
+    </div>
+    </div>
+    <section id="portfolio" class="portfoio">
+        <div class="container aos-init aos-animate" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>Gallery</h2>
+            </div>
+  
+          
+  
+          <div class="row portfolio-container myglry">
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal000.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal00.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal0.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal1.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal2.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal3.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal4.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal5.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal6.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal7.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal8.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal9.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal10.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal11.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal12.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal13.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal14.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal15.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal16.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal17.jpg" class="img-fluid" alt=""></div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app"><img src="assets/images/gal18.jpg" class="img-fluid" alt=""></div>
+  
+  
+          </div>
+  
+        </div>
+      </section>
+<!--div class="flex-parent-element">
     <div class="flex-child-element magenta">
         <ul class="img-grid-list">
             <li class="img-cell" *ngFor="let g of galleryImages">
@@ -16,4 +58,4 @@
         </ul>
     </div>
     <div class="flex-child-element green">Flex Column 2</div>
-</div>
+</div-->
