--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -32,7 +32,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Anyar</h3>
+            <h3>About Aashirwad</h3>
             <p>Aashirwad Farms with it’s spacious Party Lawns and fully air-conditioned Banquet Hall located in the heart of Yamuna Nagar, Haryana is the premier event hosting facility.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
