--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -44,3 +44,104 @@
     position: relative;
     overflow: visible;
 }
+.gallerys-bd {
+  display: grid;
+  grid-template-columns: 280px 1fr;
+  width: 1124px;
+  margin: 7% auto;
+  justify-content: space-between;
+  grid-gap: 40px;
+}
+
+.gallerys-bd .glt-cnt-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: left;
+  align-items: start;
+  width: 100%;
+  grid-gap: 10px;
+}
+
+.gallerys-bd .glt-cnt-box div {
+  margin: 0;
+  padding: 0;
+  width: 80px;
+  overflow: hidden;
+  height: 80px;
+  border: 6px solid #fff;
+  box-shadow: 0 0 4px #999;
+  grid-gap: 10px;
+  cursor: pointer;
+  
+}
+.gallerys-bd .glt-cnt-box div:hover {
+  opacity: 1;
+}
+.glt-cnt-box img {
+  width: auto;
+  height: 100%;
+  opacity: 0.6;
+}
+
+.glt-cnt-box img.active {
+  opacity: 1;
+}
+::ng-deep .glt-cnt ul {
+  margin: 0;
+  padding: 0;
+  font-size: 11px;
+  margin: 30px 0 0 0;
+  border-top: 1px solid #d5d1d1;
+  padding: 20px 0 0 0;
+}
+
+::ng-deep .glt-cnt ul li {
+  padding: 0 8px !important;
+  margin: 0;
+}
+
+::ng-deep .glt-cnt ul li a {
+  padding: 0;
+}
+
+.bigimg {
+  border: 10px solid #fff;
+  box-shadow: 0 0 4px #999;
+  margin: 0 auto;
+  width: 800px;
+  position: relative;
+}
+a.downloadimg {
+  position: absolute;
+  bottom: -53px;
+  right: 0;
+  color: #999;
+  font-style: italic;
+  cursor: pointer;
+}
+.bigimg img {
+  width: 100%;
+}
+@media(max-width: 768px){
+  .gallerys-bd{
+    flex-direction: column;
+    display: flex;
+    justify-content: revert;
+  }
+  .bigimg {
+    width: 100%;
+  }
+  .gallerys-bd {
+    width: 100%;
+    flex-direction: column-reverse;
+  }
+  .gallerys-bd .glt-cnt-box {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 40px 0 0 0;
+  }
+  
+.gallerys-bd .glt-cnt-box div {
+  width: auto;
+  
+}
+}
