--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,32 +5,6 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Gallery</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4 style="visibility:hidden;">Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contacts</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
-            <p>M-31, Industrial Area, <br>Yamuna Nagar(Harayana) India
-                <br><br>
-              <strong>Phone:</strong> +0 0000 00000 00<br>
-              <strong>Email:</strong> info@aashirwad.com<br>
-            </p>
-
-          </div>
-
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>About Aashirwad</h3>
             <p>Aashirwad Farms with it’s spacious Party Lawns and fully air-conditioned Banquet Hall located in the heart of Yamuna Nagar, Haryana is the premier event hosting facility.</p>
@@ -40,7 +14,31 @@
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
+        
 
+
+          
+          <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Useful Links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Gallery</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Contacts</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h4>Contact Us</h4>
+            <p>M-31, Industrial Area, <br>Yamuna Nagar(Harayana) India
+                <br><br>
+              <strong>Phone:</strong> +91 9896237051<br>
+              <strong>Email:</strong> info@aashirwad.com<br>
+            </p>
+
+          </div>
+          <div class="col-lg-4 col-md-6 footer-contact">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3450.83721317343!2d77.26937121511703!3d30.127471281852223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ef9372d7fdb81%3A0x11314871df9a8150!2sMsons%20Industries!5e0!3m2!1sen!2sin!4v1662547650149!5m2!1sen!2sin" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+          </div>
         </div>
       </div>
     </div>
