--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,9 +21,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contacts</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a [routerLink]="['/home']" >Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a [routerLink]="['/gallery']" >Gallery</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a [routerLink]="['/contacts']">Contacts</a></li>
             </ul>
           </div>
           <div class="col-lg-3 col-md-6 footer-contact">
