--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,9 +1,5 @@
-<div class="">
-    <div class="slide-show-container">
-    <img src="assets/images/contact.jpg" width="100%" class="contactbnr"/>
-    </div>
-    </div>
-
+<br>
+<br><br>
 <section id="contact" class="contact">
     <div class="container" data-aos="fade-up">
 
@@ -30,11 +26,17 @@
             <div class="phone">
               <i class="fa fa-phone"></i>
               <h4>Call:</h4>
-              <p>+91 9896237051</p>
+              <p>+91 9896237051, +91 9017365420</p>
             </div>
 
           </div>
-
+<div class="social-boxs">
+  <h4>Follow Us:</h4>
+  <div class="social-lst">
+    <a href="https://www.facebook.com/Aashirwadfarms/" target="_blank"><i class="fa fa-facebook"></i> @aashirwadfarms</a>
+    <a href="https://www.facebook.com/Aashirwadfarms/" target="_blank"><i class="fa fa-instagram"></i> @aashirwadfarms</a>
+  </div>
+</div>
         </div>
 
         <div class="col-lg-6 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="100">
