--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -6,11 +6,12 @@
         <li class="img-cell">1</li>
     </ul>
 </div> -->
-<div class="">
+<!--div class="">
     <div class="slide-show-container">
     <img src="assets/images/gallery.jpg" width="100%" class="contactbnr"/>
     </div>
-    </div>
+    </div-->
+    <br><br><br>
     <section id="portfolio" class="portfoio">
         <div class="container aos-init aos-animate" data-aos="fade-up">
   
@@ -59,6 +60,65 @@
             </a>
           </div>
         </div>
+        </div>
+        <div class="container aos-init aos-animate" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>Video</h2>
+            </div>
+  <div class="vidoeboxs">
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+<div class="vidoelistc">
+  <video width="320" height="240" controls>
+    <source src="../../assets/images/1.MP4" type="video/mp4">
+  </video>
+</div>
+  </div>
+          
         </div>
       </section>
 <!--div class="flex-parent-element">
