--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,6 +47,76 @@
   
         </div>
       </section>
+      
+      <section class="sections-more">
+     
+        <div class="video-backer">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>Package Available</h2>
+            </div>
+        <div class="img">
+          <img src="../../assets/images/gal0.jpg"/>
+        </div>
+            <ul class="pakeges">
+<li>
+<div class="imgs">
+  <img src="../../assets/images/p1.jpg"/>
+</div>
+  <h4>Birthday Parties</h4>
+</li>
+<li>
+  <div class="imgs">
+    <img src="../../assets/images/p2.jpg"/>
+  </div>
+    <h4>Smaller Wedding Festival</h4>
+  </li>
+  <li>
+    <div class="imgs">
+      <img src="../../assets/images/p3.jpg"/>
+    </div>
+      <h4>Corporate Meetings & Seminars</h4>
+    </li>
+            </ul>
+            </div>
+          </div>
+      </section>
+      <section id="about" class="about">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>Venue Option</h2></div>
+  
+         <div class="venue-girds">
+          <div class="grid-lft">
+            <div class="grid-lft-1">
+              <div class="v-grid-1">
+                <img src="../../assets/images/slider00.jpg"/>
+                <h4>Aashirwad Hall</h4>
+              </div>
+            </div>
+            <div class="grid-lft-2">
+              <div class="v-grid-1">
+                <img src="../../assets/images/s2.jpg"/>
+                <h4>Grand Manor</h4>
+              </div>
+              <div class="v-grid-1">
+                <img src="../../assets/images/slider5.jpg"/>
+                <h4>Green Lawn</h4>
+              </div>
+            </div>
+          </div>
+          <div class="grid-right">
+            <div class="v-grid-1">
+              <img src="../../assets/images/s3.jpg"/>
+              <h4>Full Venue</h4>
+            </div>
+          </div>
+         </div>
+  
+        </div>
+      </section>
       <section id="contact" class="contact">
         <div class="container" data-aos="fade-up">
   
