--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,1 +1,115 @@
 ::ng-deep .slick-arrow{ display: none;}
+section.sections-more {
+    background: #fff7e8;
+    overflow: visible;
+    margin: 0 0 180px 0;
+    position: relative;
+    padding: 0;
+    padding-top: 80px;
+}
+
+section.sections-more video {
+    margin: 0 auto;
+    display: block;
+}
+
+section.sections-more ul.pakeges {
+    margin: 0 auto;
+    display: block;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 0;
+    justify-content: center;
+    width: 660px;
+    position: absolute;
+    bottom: -181px;
+    left: 0;
+    right: 0;
+    z-index: 9;
+}
+
+section.sections-more ul.pakeges .imgs {
+    width: 200px;
+    height: 200px;
+    border-radius: 10em;
+    overflow: hidden;
+    background: #ffff;
+    border: 10px solid #fff;
+    margin: 0 auto;
+    box-shadow: 0 0 5px #999;
+}
+
+section.sections-more ul.pakeges li:nth-child(2) .imgs {
+    width: 297px;
+    height: 302px;
+}
+
+section.sections-more ul.pakeges .imgs img {
+    width: 100%;
+    height: 100%;
+}
+
+section.sections-more ul.pakeges li:nth-child(2) {
+    margin: 0 -18px;
+    z-index: 9;
+}
+
+section.sections-more ul.pakeges h4 {
+    margin: 0;
+    text-align: center;
+    padding: 0;
+    font-size: 18px;
+    width: 80%;
+    margin: 15px auto 0;
+}
+.video-backer .img {
+    text-align: center;
+    padding: 0 0 30px 0;
+}
+
+.video-backer .img img {
+    width: 500px;
+    border-radius: 10px;
+    border: 1px solid #bdb2b7;
+    box-shadow: 0 0 62px rgb(0 0 0 / 20%);
+}
+.venue-girds {
+    display: grid;
+    grid-template-columns: 1fr 500px;
+    grid-gap: 30px;
+}
+
+.venue-girds img {
+    width: 100%;
+}
+
+.v-grid-1 {
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+}
+
+.grid-lft {
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+}
+
+.grid-lft-2 {
+    display: flex;
+    gap: 30px;
+}
+.v-grid-1 h4 {
+    position: absolute;
+    margin: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.4);
+    color: #fff;
+    font-size: 16px;
+    padding: 10px 15px;
+    box-shadow: 0 -22px 21px rgba(0,0,0,0.4);
+}
