--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,7 +48,7 @@
         </div>
       </section>
       
-      <section class="sections-more">
+      <section class="sections-more mulitpks">
      
         <div class="video-backer">
         <div class="container" data-aos="fade-up">
