--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -34,7 +34,7 @@
   <h4>Follow Us:</h4>
   <div class="social-lst">
     <a href="https://www.facebook.com/Aashirwadfarms/" target="_blank"><i class="fa fa-facebook"></i> @aashirwadfarms</a>
-    <a href="https://www.facebook.com/Aashirwadfarms/" target="_blank"><i class="fa fa-instagram"></i> @aashirwadfarms</a>
+    <a href="https://www.instagram.com/aashirwadfarms_/" target="_blank"><i class="fa fa-instagram"></i> @aashirwadfarms_</a>
   </div>
 </div>
         </div>
