--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,12 +26,12 @@
               <li><i class="bx bx-chevron-right"></i> <a [routerLink]="['/contacts']">Contacts</a></li>
             </ul>
           </div>
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-lg-3 col-md-6 footer-contact hyprlokns">
             <h4>Contact Us</h4>
             <p>M-31, Industrial Area, <br>Yamuna Nagar(Harayana) India
                 <br><br>
-              <strong>Phone:</strong> +91 9896237051<br>
-              <strong>Email:</strong> info@aashirwad.com<br>
+              <strong>Phone: </strong> <a href="tel:+91 9896237051">+91 9896237051</a>, <a href="tel:+91 9017365420">+91 9017365420</a><br>
+              <strong>Email: </strong> <a href="mailto:Aashirwadresorts@gmail.com">Aashirwadresorts@gmail.com</a><br>
             </p>
 
           </div>
