--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -70,7 +70,7 @@
   <div class="imgs">
     <img src="../../assets/images/p2.jpg"/>
   </div>
-    <h4>Smaller Wedding Festival</h4>
+    <h4>Wedding Functions</h4>
   </li>
   <li>
     <div class="imgs">
@@ -126,7 +126,7 @@
   
           <div class="row mt-1 d-flex justify-content-end" data-aos="fade-right" data-aos-delay="100">
   
-            <div class="col-lg-5">
+            <div class="col-lg-5 linksrd">
               <div class="info">
                 <div class="address">
                   <i class="fa fa-map-marker"></i>
@@ -137,13 +137,13 @@
                 <div class="email">
                   <i class="fa fa-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@aashirwad.com</p>
+                  <p><a href="mailto:Aashirwadresorts@gmail.com">Aashirwadresorts@gmail.com</a></p>
                 </div>
   
                 <div class="phone">
                   <i class="fa fa-phone"></i>
                   <h4>Call:</h4>
-                  <p>+91 9896237051</p>
+                  <p><a href="tel:+91 9896237051">+91 9896237051</a>, <a href="tel:+91 9017365420">+91 9017365420</a></p>
                 </div>
   
               </div>
