--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2411,3 +2411,8 @@ section {
 .linksrd a:hover {
   text-decoration: underline;
 }
+iframe.myiframse {
+  width: 100%;
+  height: 344px;
+  overflow: hidden;
+}
