--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -151,8 +151,8 @@
             </div>
   
             <div class="col-lg-6 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="100">
-  
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <iframe src="http://zibal.in/aasirwad/enquiryform.php" class="myiframse"></iframe>
+              <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                 <div class="row">
                   <div class="col-md-6 form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -173,7 +173,7 @@
                   <div class="sent-message">Your message has been sent. Thank you!</div>
                 </div>
                 <div class="text-center"><button type="submit">Send Message</button></div>
-              </form>
+              </form> -->
   
             </div>
   
