--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,24 +57,24 @@
             <h2>Package Available</h2>
             </div>
         <div class="img">
-          <img src="../../assets/images/gal0.jpg"/>
+          <img src="assets/images/gal0.jpg"/>
         </div>
             <ul class="pakeges">
 <li>
 <div class="imgs">
-  <img src="../../assets/images/p1.jpg"/>
+  <img src="assets/images/p1.jpg"/>
 </div>
   <h4>Birthday Parties</h4>
 </li>
 <li>
   <div class="imgs">
-    <img src="../../assets/images/p2.jpg"/>
+    <img src="assets/images/p2.jpg"/>
   </div>
     <h4>Wedding Functions</h4>
   </li>
   <li>
     <div class="imgs">
-      <img src="../../assets/images/p3.jpg"/>
+      <img src="assets/images/p3.jpg"/>
     </div>
       <h4>Corporate Meetings & Seminars</h4>
     </li>
@@ -92,24 +92,24 @@
           <div class="grid-lft">
             <div class="grid-lft-1">
               <div class="v-grid-1">
-                <img src="../../assets/images/slider00.jpg"/>
+                <img src="assets/images/slider00.jpg"/>
                 <h4>Aashirwad Hall</h4>
               </div>
             </div>
             <div class="grid-lft-2">
               <div class="v-grid-1">
-                <img src="../../assets/images/s2.jpg"/>
+                <img src="assets/images/s2.jpg"/>
                 <h4>Grand Manor</h4>
               </div>
               <div class="v-grid-1">
-                <img src="../../assets/images/slider5.jpg"/>
+                <img src="assets/images/slider5.jpg"/>
                 <h4>Green Lawn</h4>
               </div>
             </div>
           </div>
           <div class="grid-right">
             <div class="v-grid-1">
-              <img src="../../assets/images/s3.jpg"/>
+              <img src="assets/images/s3.jpg"/>
               <h4>Full Venue</h4>
             </div>
           </div>
